Fixed tooltip overflow bug

--- a/src/scss/desktop/_main.scss
+++ b/src/scss/desktop/_main.scss
@@ -89,8 +89,6 @@ body {
 
     transition: all 0.2s ease-in-out;
 
-    overflow: hidden;
-
     &__info {
         display: grid;
         grid-template: auto auto / auto;
@@ -99,6 +97,8 @@ body {
         background-color: rgba(0, 0, 0, 0.4);
 
         padding: util.rem(4) 0 0 0;
+
+        border-radius: 0 0 util.rem(32) util.rem(32);
 
         backdrop-filter: blur(4rem);
 
